--- a/src/de/nivram710/sortieralgorithmen/fx/layout_window.fxml
+++ b/src/de/nivram710/sortieralgorithmen/fx/layout_window.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.nivram710.sortieralgorithmen.fx.Controller">
    <right>
@@ -17,6 +17,9 @@
             </VBox.margin>
          </Text>
          <Spinner fx:id="spinner_array_size" editable="true" prefHeight="25.0" prefWidth="109.0">
+            <valueFactory>
+               <SpinnerValueFactory.IntegerSpinnerValueFactory min="1" max="1000000" initialValue="10000" amountToStepBy="500"/>
+            </valueFactory>
             <opaqueInsets>
                <Insets/>
             </opaqueInsets>
