--- a/src/de/nivram710/sortieralgorithmen/fx/layout_window.fxml
+++ b/src/de/nivram710/sortieralgorithmen/fx/layout_window.fxml
@@ -16,10 +16,7 @@
                <Insets bottom="10.0"/>
             </VBox.margin>
          </Text>
-         <Spinner fx:id="spinner_array_size" editable="true" prefHeight="25.0" prefWidth="109.0">
-            <valueFactory>
-               <SpinnerValueFactory.IntegerSpinnerValueFactory min="1" max="1000000" initialValue="10000" amountToStepBy="500"/>
-            </valueFactory>
+         <Spinner fx:id="spinner_array_size" prefHeight="25.0" prefWidth="109.0">
             <opaqueInsets>
                <Insets/>
             </opaqueInsets>
